--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Твой уровень кибербезопасности</title>
-    <link rel="stylesheet" href="r.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body> 
     <div class="container">
@@ -86,6 +86,6 @@
             <a href="file:///D:/vs%20code/rr/a.html" class="buttonns">Опрос по тесту</a>
         </div>
     </div>
-    <script src="r.js"></script>
+    <script src="j.js"></script>
 </body>
 </html>
