--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div id="score-message"></div>
             <div id="answer-explanations"></div>
             <button href="/" class="try-again-button">Пройти заново</button>
-            <a href="file:///D:/vs%20code/rr/a.html" class="buttonns">Обратно</a>
+            <a href="https://bumochka.github.io/reg/" class="buttonns">Обратно</a>
         </div>
     </div>
     <script src="j.js"></script>
